--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,14 @@
 # Changelog
+## [0.6.0] - 2025-08-27
+### Breaking changes
+ - Use netlink-packet-core 0.8. (a78cd33)
+
+### New features
+ - N/A
+
+### Bug fixes
+ - N/A
+
 ## [0.5.1] - 2023-07-10
 ### Breaking changes
  - N/A
